# sme-vital-agents

./: .gitignore  CLAUDE.md  README.md  launch.py  pyproject.toml  sva.cmd
agents/admin/: AGENT.md  CLAUDE.md
agents/agentops/: AGENT.md  CLAUDE.md
agents/optiqos/: AGENT.md  CLAUDE.md
agents/pm/: AGENT.md
agents/signallab/: AGENT.md  CLAUDE.md
cli/: package.json
cli/src/: index.ts
cli/src/commands/: create.ts  export.ts  list.ts  run.ts  utils.ts
core/: __init__.py  instructions.py
core/backends/: __init__.py  base.py  claude_code_backend.py  ollama_backend.py  registry.py
core/templates/: main.py.j2  requirements.txt.j2
core/tools/: __init__.py  base.py  builtin.py  registry.py
instructions/: layer-1-global.md  layer-2-code-agent.md
