[project]
name = "sme-vital-agents"
version = "0.1.0"
description = "Multi-framework agent factory — agents that build standalone agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
claude-code = []
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
